k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommendations
  labels:
    app: recommendations
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0%
      maxUnavailable: 50%
  selector:
    matchLabels:
      app: recommendations
  template:
    metadata:
      labels:
        app: recommendations
    spec:
      imagePullSecrets:
        - name: all-icr-io
      restartPolicy: Always
      containers:
        - name: recommendations
          image: cluster-registry:32000/recommendations:latest
          #image: recommendation
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
          readinessProbe:
            initialDelaySeconds: 5
            periodSeconds: 30
            httpGet:
              path: /health
              port: 8080
          resources:
            limits:
              cpu: "0.50"
              memory: "128Mi"
            requests:
              cpu: "0.25"
              memory: "64Mi"
