k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recommendation
spec:
  selector:
    app: recommendation
  type: ClusterIP
  internalTrafficPolicy: Local
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
